--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,25 @@
 
 @theme {
   --font-base: "Work Sans", Helvetica, sans-serif;
+  --color-base: #f6f6f6;
+  --color-text: #171717;
   --color-primary: #23be0a;
 }
 
 :root {
   font-family: var(--font-base);
   color-scheme: light;
-  color: #171717;
-  background-color: #f6f6f6;
+  color: var(--color-text);
+  background-color: var(--color-base);
+  cursor: url(/cursor.png), default;
+}
+
+button, a {
+  cursor: url(/pointer.png), pointer;
+}
+
+nav ul a.active {
+  font-weight: 600;
+  color: var(--color-primary);
+  border: 1px solid var(--color-primary);
 }
